--- a/democratos/CreateYourLaws/static/css/style.css
+++ b/democratos/CreateYourLaws/static/css/style.css
@@ -40,11 +40,16 @@ aside{
 
 main{
 	display: inline-block;
+	background:#EEF6F6;
 	width: 70%;
+	float: right;
+	height: 100%;
+	min-height: 900px;
 }
 
 #intro{
-	margin: 0.5%;
+	margin: 0.2% auto;
+	background: #FFFFFF;
 	border-width: 4px;
 	border-color: black;
 	border-style: solid;
@@ -52,15 +57,12 @@ main{
 	border-spacing: 10px;
 	padding: 10px;
 	color: black;
+	display: block;
 }
 
 #content{
-	margin: 0.2%;
-	border-width: 4px;
-	border-color: black;
-	border-style: solid;
-	border-radius: 8px;
-	border-spacing: 5px;
+	margin: 0 auto;
+	display: block;
 }
 
 
@@ -85,7 +87,7 @@ section{
 }
 
 td {
-	width: 94%;
+	width: 96%;
 	margin: 0 auto;
 	position: relative;	
 	text-overflow: ellipsis;
@@ -110,7 +112,7 @@ table{
 
 button{
 	padding: 1.5%;
-	margin: 4%;
+	margin: 0.5%;
 	border-radius: 30px;
 	color: black;
 	cursor: pointer;
@@ -153,6 +155,7 @@ button{
 	list-style: none;
 }
 
+/*
 .disclaim
 {
 	background-color: #F9AC68;
@@ -164,51 +167,37 @@ button{
 	margin: 1%;
 	padding: 10px;
 }
+*/
 
 .Bigposopinion
 {
 	background-color: #93f99a;
-	border-width: 4px;
+	border-width: 2px;
 	border-color: #38a940;
 	border-style: solid;
 	border-radius: 8px;
 	display: inline-block;
-	width: 44.5%;
-	margin: 1%;
+	width: 46%;
+	margin: 0.5%;
 	padding: 1%;
 	clear: both;
 }
 
 .posopinion
 {
-	background-color: #93f99a;
-	border-width: 2px;
+	background-color: #cffcd2;
+	border-width: 1px;
 	border-color: #38a940;
 	border-style: solid;
-	border-radius: 8px;
+	border-radius: 10px;
 	display: inline-block;
-	margin: 1%;
+	margin: 0.2%;
 	padding: 2%;
 }
 
 .Bignegopinion
 {
 	background-color: #f98b8b;
-	border-width: 4px;
-	border-color: #f92222;
-	border-style: solid;
-	border-radius: 8px;
-	border-spacing: 10px;
-	display: inline-block;
-	vertical-align: top;
-	width: 44.5%;
-	margin: 1%;
-	padding: 1%;
-}
-
-.negopinion
-{
-	background-color: #f98b8b;
 	border-width: 2px;
 	border-color: #f92222;
 	border-style: solid;
@@ -216,9 +205,21 @@ button{
 	border-spacing: 10px;
 	display: inline-block;
 	vertical-align: top;
-	margin: 1%;
+	width: 46%;
+	margin: 0.5%;
 	padding: 1%;
-	clear:both;
+}
+
+.negopinion
+{
+	background-color: #fccfcf;
+	border-width: 1px;
+	border-color: #f92222;
+	border-style: solid;
+	border-radius: 10px;
+	display: inline-block;
+	margin: 0.2%;
+	padding: 2%;
 }
 
 .Bigproposition
@@ -251,17 +252,6 @@ section form{
 	list-style: none;
 }
 
-/*
-#opform{
-	background: -moz-linear-gradient(110deg,#f98b8b 50%,#93f99a 50%);
-	border-style: solid;
-	border-color: #93f99a;
-	border-radius: 8px;
-}
-
-#opform ul{
-	list-style: none;
-} */
 
 .law_text
 {	
@@ -271,13 +261,16 @@ section form{
 	border-style: solid;
 	border-radius: 8px;
 	margin: 1%;
-	padding: 2%;
+	padding: 1%;
 }
 
+.debate{
+	overflow: auto;
+}
 
 .explaination
 {
-	background-color: #f2cf7b;
+	background-color: #f7e5ba;
 	border-width: 2px;
 	border-color: #f0aa01;
 	border-style: solid;
@@ -290,7 +283,7 @@ section form{
 
 .question
 {
-	background-color: #a477cc;
+	background-color:#dac8ea;
 	border-width: 2px;
 	border-color: #5f2f89;
 	border-style: solid;
@@ -314,17 +307,17 @@ section form{
 
 .icn
 {
-	vertical-align: -8px;	
+	vertical-align: -3px;	
 }
 
 .UP
 {
-	vertical-align: -12px;	
+	vertical-align: -6px;	
 }
 
 .DOWN
 {
-	vertical-align: -12px;	
+	vertical-align: -6px;	
 }
 
 .count
