--- a/democratos/CreateYourLaws/templates/GetForm.html
+++ b/democratos/CreateYourLaws/templates/GetForm.html
@@ -12,6 +12,6 @@
 	{% endif%}
 <button type="submit" class="but{{typeform}}" name="{{typeform}}form{{idref}}"> Envoyer </button>
 {% if IsModif %}
-	<button class="but{{typeform}}" name="Cancel{{typeform}}{{idform}}form"> Annuler </button>
+	<button class="but{{typeform}}" id="Cancel{{typeform}}{{idform}}form"> Annuler </button>
 {% endif%}
 </form> 
