--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -150,7 +150,6 @@
                                             {{x.text_opp}}
                                         {% endif %}
                                         </div>
-                                        <hr>
                                         <div class="count">
                                         <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                                         <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}}
@@ -211,7 +210,6 @@
                                                     {{x.text_opn}}
                                                 {% endif %}
                                                 </div>
-                                                <hr>
                                                 <div class="count">
                                                 <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                                                 <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}}
@@ -281,7 +279,6 @@
                                     <strong>{{x.text_prp}}</strong> <br/>
                                 {% endif %}
                             </div>
-                            <hr>
                             <div class="count">
                             <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                             <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}} 
@@ -338,7 +335,6 @@
                             </li>
                         </ul> 
                         </div>
-                        <br>
                     {% endif %}
                     {% if x.title %}
                         <strong><b>{{x.title}}</b></strong>
@@ -359,7 +355,6 @@
                             </li>
                         </ul> 
                         </div>
-                        <br>
                     {% endif %}
                     {% if x.title %}
                         <strong><b>{{x.title}}</b></strong>
@@ -367,8 +362,7 @@
                     {% else %}
                         <strong>{{x.text_q}}</strong> 
                     {% endif %}
-            {% endif %}  
-            <hr>                  
+            {% endif %}             
             <div class="count">
                 <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
                 <img src="{% static 'icons/exp.png' %}" alt="com" class="icn"> {{x.nb_exp}} 
@@ -396,23 +390,23 @@
             {% endif %}
                 {% if x.nb_exp != 0 or x.nb_q != 0 %}
                     {% if x|isinst:'CreateYourLaws.models.Explaination' %}
-                        <div class="GetDebateChild" name="childexp{{x.id}}" id="childexp{{x.id}}"> Voir les réactions à ce commentaire </div>
+                        <span class="GetDebateChild" name="childexp{{x.id}}" id="childexp{{x.id}}"> Voir les réactions à ce commentaire </span>
                     {% else %}
-                        <div class="GetDebateChild" name="childqst{{x.id}}" id="childqst{{x.id}}"> Voir les réactions à ce commentaire </div>
+                        <span class="GetDebateChild" name="childqst{{x.id}}" id="childqst{{x.id}}"> Voir les réactions à ce commentaire </span>
                     {% endif %}
                 {% else %}
                     {% if x|isinst:'CreateYourLaws.models.Explaination' %}
-                    <div id='exp{{x.id}}comments'>
-                        <button class="butexp" type="button" name="exp:exp:{{x.id}}"> Commenter </button>
+                    <span id='exp{{x.id}}comments' class="tocenter">
+                        <button class="butexp" type="button" name="exp:exp:{{x.id}}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commenter&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
                         <button class="butqst" type="button" name="exp:qst:{{x.id}}">Poser votre question </button>
                         <p id="expaskform{{x.id}}"></p>
-                    </div>
+                    </span>
                     {% else %}
-                    <div id='qst{{x.id}}comments'>
-                        <button class="butexp" type="button" name="qst:exp:{{x.id}}"> Commenter </button>
+                    <span id='qst{{x.id}}comments' class="tocenter">
+                        <button class="butexp" type="button" name="qst:exp:{{x.id}}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commenter&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
                         <button class="butqst" type="button" name="qst:qst:{{x.id}}">Poser une question </button>
                         <p id="qstaskform{{x.id}}"></p>
-                    </div>
+                    </span>
                     {% endif %}
                 {% endif %}
                 </p>
@@ -423,9 +417,9 @@
     {% if typeref == 'loi' or typeref == 'prp' %}
         <h3>une réaction?</h3>
     {% endif %}
-    <button class="butexp" name="{{typeref}}:exp:{{id_ref}}" type="button"> Commenter </button>
+    <button class="butexp" name="{{typeref}}:exp:{{id_ref}}" type="button">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Commenter&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button>
     <button class="butqst" name="{{typeref}}:qst:{{id_ref}}" type="button">Poser une question </button>
-    <p id="{{typeref}}askform{{id_ref}}"></p>
+    <span id="{{typeref}}askform{{id_ref}}"></span>
 </section>
 
 {% endautoescape %}
