prpform fixed! go Getreflection for all ref now

--- a/democratos/CreateYourLaws/templates/GetReflection.html
+++ b/democratos/CreateYourLaws/templates/GetReflection.html
@@ -280,6 +280,7 @@
                                 {% else %}
                                     <strong>{{x.text_prp}}</strong> <br/>
                                 {% endif %}
+                                <i><ins>Nota:</ins></i><br/>{{x.details_prp}}
                             </div>
                             <div class="count">
                             <img src="{% static 'icons/qst.png' %}" alt="?" class="icn"> {{x.nb_q}}
