--- a/democratos/CreateYourLaws/templates/CreateNewLaw.html
+++ b/democratos/CreateYourLaws/templates/CreateNewLaw.html
@@ -12,8 +12,17 @@
 
 
 {% block content %}
-<p> PAGE DE CREATION DE LOI!!!!!</p>
-
+<form action="{% url 'CreateNewLaw'%}"  method="post" name="idbox:{{box_id}}">
+    {{ form.as_p }} 
+    <input type="hidden" name="box_id" value="{{box_id}}">
+	{% if IsModif %}
+		<input type="hidden" name="IsModif" value="True">
+		<input type="hidden" name="idform" value="{{idform}}">
+	{% else %}
+		<input type="hidden" name="IsModif" value="">
+	{% endif%}
+<button type="submit" class="but{{typeform}}" name="{{typeform}}form{{idref}}"> Envoyer </button>
+</form> 
 <script type="text/javascript" src="{% static "ckeditor/ckeditor/ckeditor.js" %}"></script>
 <script type="text/javascript" src="{% static "ckeditor/ckeditor-init.js" %}"></script>
 
