--- a/democratos/CreateYourLaws/templates/InDatBox.html
+++ b/democratos/CreateYourLaws/templates/InDatBox.html
@@ -26,7 +26,7 @@
 				{% for x in lqs %}
 					<li>
 				    {% if x|isinst:'CreateYourLaws.models.LawArticle' %}
-					    <div class="IDB GetReflection" name="loi:{{x.id}}"><label class="suscribe" id="checkloi{{x.id}}"><input type="checkbox" name="checkloi{{x.id}}">s'abonner</label>
+					    <div class="IDB GetReflection law_text" name="loi:{{x.id}}"><label class="suscribe" id="checkloi{{x.id}}"><input type="checkbox" name="checkloi{{x.id}}">s'abonner</label>
 					    {% autoescape off %}
 						    <strong>{{x.title}}</strong><br>
 					    	<p>{{x.text_law}}</p>
